Colaboratory를 통해 생성됨 second

--- a/MyfirstProgram.ipynb
+++ b/MyfirstProgram.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCkyqUmKIzVp1aLz9dmPqQ",
+      "authorship_tag": "ABX9TyMmZWQNGeo+kBalSCExMgSV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,11 +71,10 @@
         "\n",
         "a =10\n",
         "b =5\n",
+        "c =1\n",
         "\n",
         "print(a+b)\n",
-        "print(a-b)\n",
-        "print(a*b)\n",
-        "print(a/b)"
+        "print(a-b)"
       ]
     },
     {
